Mobile side-bar improvements: * Side-bar toggles in an out on touching the open icon * Side-bar occupies larger % of screen for phone form-factor * Correct the media-query size selectors to cut off at iPad size * Adjust font sizes etc for phone form-factor 	Change on 2014/05/07 by jorr <jorr@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=66460513

--- a/coursebuilder/assets/css/main.mobile.css
+++ b/coursebuilder/assets/css/main.mobile.css
@@ -2,12 +2,12 @@
   position: fixed;
   top: 0;
   height: 100%;
-  left: -20%;
-  width: 20%;
+  left: -25%;
+  width: 25%;
   z-index: 2;
+  margin: 0;
   padding-right: 20px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-radius: 0 5px 5px 0;
   border: solid #ccc 1px;
   background-color: #e0e0e0;
   transition: left 0.7s;
@@ -30,11 +30,49 @@
 #gcb-nav-y.left-menu + .gcb-article {
   float: none;
   width: auto;
-  padding: 0 10px;
 }
 #gcb-header, #gcb-nav-x {
   padding-left: 25px;
 }
 #gcb-main {
   margin-left: 10px;
+}
+body.hide-overflow {
+  overflow: hidden;
+  height: 100%;
+}
+@media (max-width: 600px) {
+  #gcb-nav-y.left-menu {
+    left: -60%;
+    width: 60%;
+  }
+  .gcb-unit-header {
+    font-size: 18px;
+  }
+  .gcb-lesson-title {
+    font-size: 15px;
+  }
+  #lesson-title {
+    float: none;
+    width: 100%;
+  }
+  #get-text-button {
+    float: none;
+    width: 98%;
+  }
+  .gcb-lesson-content {
+     margin-left: 3px;
+  }
+  .gcb-lesson-content > ul {
+     margin: 5px 5px 5px 15px;
+  }
+  .gcb-prev-button {
+    margin: 5px 0 5px 25px;
+  }
+  .gcb-next-button {
+    margin: 5px 25px 5px 0;
+  }
+  .gcb-next-button, .gcb-prev-button {
+    font-size: 13px;
+  }
 }
